--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -96,7 +96,7 @@
                             header-class="'date-col'" 
                             data-title="'Date'"
                             filter="{'inspectionID':'text'}"
-                            sortable="'inspectionID'">{{action.issueDate}}</td>
+                            sortable="'inspectionID'">{{action.issuedDate}}</td>
                     </tr>
                 </table>
         </section>
