--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -36,7 +36,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">warning</i>
+                                <i class="material-icons">flag</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
@@ -109,43 +109,20 @@
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <span class="primary">Document Link</span>
+                            <a class="primary" href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank">Document Link</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
-                        </span>
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#">
-                        <span class="avatar">
-                            <i class="material-icons md-18">insert_drive_file</i>
-                        </span>
-                        <span class="title">
-                            <span class="primary">Document Link</span>
-                        </span>
-                        <span class="actions">
-                            <i class="material-icons md-18">file_download</i>
-                        </span>
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#">
-                        <span class="avatar">
-                            <i class="material-icons md-18">insert_drive_file</i>
-                        </span>
-                        <span class="title">
-                            <span class="primary">Document Link</span>
-                        </span>
-                        <span class="actions">
-                           <i class="material-icons md-18">file_download</i>
                         </span>
                     </a>
                 </div>
             </section>
 
             <section class="card">
-                <h2 class="card-title">Links of Interest</h2>
+                <h2 class="card-title">External Links</h2>
                 <ul class="resource-list resource-list-sm list-group">
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
+                    <li class="list-group-item"><a href="#" target="_blank">Mining Compliance &amp; Enforcement</a></li>
+                    <li class="list-group-item"><a href="#" target="_blank">Environmental Assessment Office Compliance &amp; Enforcement</a></li>
                 </ul>
             </section>
             
