--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -18,11 +18,13 @@
                 <i class="material-icons fl">insert_drive_file</i>Project Documents
             </a>
             -->
+            <!--
             <a class="btn btn-link" 
                 data-toggle="modal" 
                 data-target="#mapWindow">
                 <i class="material-icons fl">pin_drop</i>Launch Map
             </a>
+            -->
         </div>
         
     </div>
@@ -35,7 +37,7 @@
 
             <section>
                 <h2>Topics</h2>
-                <p>Explore the topic areas below to learn more about how the mining operations generally and the <strong>{{project.name}}</strong> specifically address the shared values of the people of British Columbia.</p>
+                <p>Explore the topic areas below to learn more about how the mining operations generally and the {{project.name}} specifically address the shared values of the people of British Columbia.</p>
                 <ul class="topic-blocks block-container clearfix">
                     <li>
                         <a class="block block-hover" href="/admin/prototype/topic">
@@ -100,7 +102,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">warning</i>
+                                <i class="material-icons">flag</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
