--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -103,19 +103,19 @@
                 
             <section class="card">
                 <h2 class="card-title">Related Documents</h2>
-                <div class="resource-list resource-list-sm list-group">
-                    <a class="list-group-item list-group-item-action" href="#">
+                <ul class="resource-list resource-list-sm list-group">
+                    <li class="list-group-item list-group-item-action" href="#">
                         <span class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <a class="primary" href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank">Document Link</a>
+                            <a href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank">Compliance Management Framework</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
                         </span>
-                    </a>
-                </div>
+                    </li>
+                </ul>
             </section>
 
             <section class="card">
