--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -19,8 +19,7 @@
     <div class="row">
         <main class="col-sm-12 col-md-7 col-lg-8">
         
-            <section>
-                {{subtopic.description}}
+            <section ng-bind-html="subtopic.description">
             </section>
 
             <section>
