--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -17,15 +17,13 @@
     <div class="row">
         <main class="col-sm-12 col-md-7 col-lg-8">
         
-            <section>
-                <p>{{topic.description}}</p>
-            </section>
+            <section ng-bind-html="topic.description"></section>
 
             <section>
                 <h2>Environment Conditions</h2>
                 <ul class="topic-blocks subtopic block-container clearfix">
-                    <li ng-repeat="subtopic in topics">
-                        <a class="block block-hover" href="#">
+                    <li ng-repeat="subtopic in topic.subtopics">
+                        <a class="block block-hover" ui-sref="admin.prototype.subtopic({topic: topic.topic, subtopic: subtopic.subtopic})">
                             <span class="title">{{subtopic.subtopic}}</span>
                             <span class="actions">{{subtopic.conditions.length}}</span>
                         </a>
