--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -62,6 +62,10 @@ footer {
 
     .tag-list {
         margin-top: 0.25rem;
+
+        tag {
+            margin-right: 0.25rem;
+        }
     }
 
     .actions {
