--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -21,14 +21,14 @@
         <main class="col-sm-12 col-md-7 col-lg-8">
             
             <section class="page-narrative">
-                <p>{{inspection.summary || 'Inspection summary is missing in spreadsheet/json.'}}</p>
+                <p>{{inspection.followupText}}</p>
                 <ul class="resource-list resource-list-lg list-group">
                     <li class="list-group-item list-group-item-action">
                         <div class="avatar">
                             <i class="material-icons">insert_drive_file</i>
                         </div>
                         <span class="title">
-                            <a class="primary" ng-ref="{{inspection.documentUrl}}">Download Inspection Report - {{inspection.inspectionId}}</a>
+                            <a class="primary" ng-href="{{inspection.documentUrl}}" target="_blank">Download Inspection Report - {{inspection.inspectionId}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons">file_download</i>
@@ -45,7 +45,7 @@
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
                             <span class="title">
-                                <a class="primary" ng-ref="{{inspection.followUpDocumentUrl}}">Download Mine Manager's Response - {{inspection.inspectionId}}</a>
+                                <a class="primary" ng-href="{{inspection.followupDocumentUrl}}">Download Mine Manager's Response - {{inspection.inspectionId}}</a>
                             </span>
                             <span class="actions">
                                 <i class="material-icons">file_download</i>
@@ -141,7 +141,7 @@
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <span class="primary">{{document.name}}</span>
+                            <span class="primary">{{inspection.documentName}}</span>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
