--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -36,7 +36,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">flag</i>
+                                <i class="material-icons">list</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
@@ -89,9 +89,9 @@
                                 data-title="'Inspection Date'"
                                 filter="{'inspection.date':'text'}"
                                 sortable="'inspection.date'">{{inspection.date}}</td>
-                            <td class="date-col"
-                                header-class="'date-col'"
-                                data-title="'Most Recent Follow-Up'"
+                            <td class="followup-col"
+                                header-class="'followup-col'"
+                                data-title="'Recent Follow-Up'"
                                 filter="{'inspection.date':'text'}"
                                 sortable="'inspection.date'">{{inspection.followupType}}</td>
                         </tr>
@@ -109,7 +109,7 @@
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <a href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank">Compliance Management Framework</a>
+                            <a href="http://www2.gov.bc.ca/assets/gov/environment/research-monitoring-and-reporting/reporting/reporting-documents/environmental-enforcement-docs/compliance_mgmt_framework.pdf" target="_blank">Ministry of Environment - Compliance Management Framework</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
