--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -89,7 +89,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">playlist_add_check</i>
+                                <i class="material-icons">assignment_turned_in</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Inspections</span>
@@ -102,7 +102,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">flag</i>
+                                <i class="material-icons">list</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
