--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -115,29 +115,7 @@
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
                         <span class="title">
-                            <span class="primary">Document Link</span>
-                        </span>
-                        <span class="actions">
-                            <i class="material-icons md-18">file_download</i>
-                        </span>
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#">
-                        <span class="avatar">
-                            <i class="material-icons md-18">insert_drive_file</i>
-                        </span>
-                        <span class="title">
-                            <span class="primary">Document Link</span>
-                        </span>
-                        <span class="actions">
-                            <i class="material-icons md-18">file_download</i>
-                        </span>
-                    </a>
-                    <a class="list-group-item list-group-item-action" href="#">
-                        <span class="avatar">
-                            <i class="material-icons md-18">insert_drive_file</i>
-                        </span>
-                        <span class="title">
-                            <span class="primary">Document Link</span>
+                            <span class="primary">Mount Milligan 2015 Dam Safety Inspection</span>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
@@ -149,9 +127,9 @@
             <section class="card">
                 <h2 class="card-title">Links of Interest</h2>
                 <ul class="resource-list resource-list-sm list-group">
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
-                    <li class="list-group-item"><a href="#">Document Link</a></li>
+                    <li class="list-group-item"><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/geotechnical-information" target="_blank">Ministry of Energy &amp; Mines Geotechnical Information</a></li>
+                    <li class="list-group-item"><a href="https://news.gov.bc.ca/releases/2016MEM0018-001393" target="_blank">News Release: British Columbia Now a Global Leader on Mine Tailings Storage Regulations</a></li>
+                    <li class="list-group-item"><a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/health-and-safety/code-review/hsrc_code_part_10_revisions_effective_july_20_2016.pdf" target="_blank">Revisions to Part 10 of the Health, Safety and Reclamation Code for Mines in British Columbia (effective July 20, 2016)</a></li>
                 </ul>
             </section>
 
