--- a/modules/prototype/client/styles/helpers/helpers.scss
+++ b/modules/prototype/client/styles/helpers/helpers.scss
@@ -80,6 +80,7 @@ p {
     text-decoration: underline;
     white-space: nowrap;
     font-size: 0.875rem;
+    font-weight: bold;
 }
 
 /* BOOTSTRAP OVERRIDES */
