--- a/modules/prototype/client/styles/components/ce-grid.scss
+++ b/modules/prototype/client/styles/components/ce-grid.scss
@@ -35,7 +35,8 @@
     }
 }
 
-.inspections-grid {
+.inspections-grid,
+.actions-grid {
     table-layout: fixed;
 
     tr {
@@ -80,13 +81,12 @@
         td.date-col {
             position: absolute;
             top: 0;
-            right: 0;
             padding: 1rem;
+            font-size: 0.75rem;
         }
     }
 
     .row-desc {
-        @extend .secondary-color;
         margin-top: 0.5rem;
         margin-bottom: 0.75rem;
         font-size: 0.75rem;
@@ -111,5 +111,26 @@
         p {
             margin: 0.5rem 0;
         }
+    }
+}
+
+.inspections-grid {
+    .date-col {
+        right: 11rem;
+    }
+
+    .followup-col {
+        text-align: right;
+        width: 11rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 0.75rem;
+    }
+}
+
+.actions-grid {
+    .date-col {
+        right: 0;
     }
 }
