--- a/modules/prototype/client/styles/layouts/layout.scss
+++ b/modules/prototype/client/styles/layouts/layout.scss
@@ -63,8 +63,9 @@ footer {
     .tag-list {
         margin-top: 0.25rem;
 
-        tag {
+        .tag {
             margin-right: 0.25rem;
+            padding: 0.4em 0.6em;
         }
     }
 
@@ -249,4 +250,8 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
+}
+
+.tag {
+    padding: 0.4em 0.6em;
 }
