--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -37,7 +37,7 @@
                 </ul>
             </section>
 
-            <section>
+            <section ng-if="inspection.followupDocumentUrl">
                 <h2>Inspection Follow Up</h2>
                      <ul class="resource-list resource-list-lg list-group">
                         <li class="list-group-item list-group-item-action">
@@ -62,14 +62,6 @@
                         <div class="form-inline">
                             <div class="form-group">
                                 <select class="form-control">
-                                    <option selected>Sort by</option>
-                                    <option>Option 1</option>
-                                    <option>Option 2</option>
-                                    <option>Option 3</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <select class="form-control">
                                     <option>10</option>
                                     <option>25</option>
                                     <option>50</option>
@@ -79,7 +71,7 @@
                     </div>
                 </div>
 
-                <table ng-table="tableParams" class="inspections-grid ce-grid table table-striped table-hover" show-filter="false">
+                <table ng-table="tableParams" class="inspections-grid actions-grid ce-grid table table-striped table-hover" show-filter="false">
                     <tr ng-repeat="action in inspectionActions">
                         <td class="id-col"
                             header-class="'id-col'"
@@ -135,18 +127,28 @@
             <section class="card">
                 <h2 class="card-title">Related Documents</h2>
                 <div class="resource-list resource-list-sm list-group">
-                    <a class="list-group-item list-group-item-action" href="#"
-                        ng-repeat="document in inspection.relatedDocuments">
-                        <span class="avatar">
+                   <li class="list-group-item list-group-item-action">
+                        <div class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
-                        </span>
+                        </div>
                         <span class="title">
-                            <span class="primary">{{inspection.documentName}}</span>
+                            <a class="primary" ng-href="{{inspection.documentUrl}}" target="_blank">Inspection Report - {{inspection.inspectionId}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons md-18">file_download</i>
                         </span>
-                    </a>
+                    </li>
+                    <li class="list-group-item list-group-item-action" ng-if="inspection.followupDocumentUrl">
+                        <div class="avatar">
+                            <i class="material-icons md-18">insert_drive_file</i>
+                        </div>
+                        <span class="title">
+                            <a class="primary" ng-href="{{inspection.followupDocumentUrl}}">Mine Manager's Response - {{inspection.inspectionId}}</a>
+                        </span>
+                        <span class="actions">
+                            <i class="material-icons md-18">file_download</i>
+                        </span>
+                    </li>
                 </div>
             </section>
 
