PROTOTYPE: update json with ids, rebind.

--- a/modules/prototype/client/views/ce-action.html
+++ b/modules/prototype/client/views/ce-action.html
@@ -25,7 +25,7 @@
             <main class="col-sm-12 col-md-7 col-lg-8">
                 
                 <section class="action-summary">
-                    <p>{{action.summary || 'Summary: Missing from spreadsheet / json'}}</p>
+                    <p>{{action.orderIntroText}}</p>
                 </section>
 
                 <section class="action-narrative">
