--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -39,27 +39,13 @@
                 <h2>Topics</h2>
                 <p>Explore the topic areas below to learn more about how the mining operations generally and the {{project.name}} specifically address the shared values of the people of British Columbia.</p>
                 <ul class="topic-blocks block-container clearfix">
-                    <li>
-                        <a class="block block-hover" ui-sref="admin.prototype.topic({topic: 'Environment'})">
-                            <h3>Environment</h3>
+                    <li ng-repeat="topic in topics">
+                        <a class="block block-hover" ng-show="topic.description !== ''" ui-sref="admin.prototype.topic({topicId: topic.topicId})">
+                            <h3>{{topic.name}}</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
-                    </li>
-                    <li>
-                        <a class="block block-hover" ui-sref="admin.prototype.subtopic({topic: 'Environment', subtopic: 'Tailings Management'})">
-                            <h3>Communities</h3>
-                            <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="block block-hover" href="#">
-                            <h3>Health &amp; Safety</h3>
-                            <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="block block-hover" href="#">
-                            <h3>Heritage</h3>
+                        <a class="block block-hover" ng-show="topic.description ===''" ui-sref="#">
+                            <h3>{{topic.name}}</h3>
                             <span class="subtopics">Subtopic, Subtopic, Subtopic, etc.</span>
                         </a>
                     </li>
@@ -80,7 +66,7 @@
                         </span>
                     </li>
                 </ul>
-                <a class="read-more-link mt-05" href="javascript:void();">Learn More about Authorizations for Mount Milligan »</a>
+                <a class="read-more-link mt-05" href="javascript:void();">Learn More about Authorizations for {{project.name}} »</a>
             </section>
 
             <section>
@@ -113,7 +99,7 @@
                         </div>
                     </li>
                 </ul>
-                <a class="read-more-link mt-025" ui-sref="admin.prototype.cemain">More about Compliance &amp; Enforcement at Mount Milligan »</a>
+                <a class="read-more-link mt-025" ui-sref="admin.prototype.cemain">More about Compliance &amp; Enforcement at {{project.name}} »</a>
             </section>
 
         </main>
