--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -8,11 +8,11 @@
         <span>/</span>
         <a ui-sref="admin.prototype.projectmain">{{project.name}}</a>
         <span>/</span> 
-        <span>{{topic.topic}}</span>
+        <span>{{topic.name}}</span>
     </div>
     
     <div class="title-container">
-        <h1>{{topic.topic}}</h1>
+        <h1>{{topic.name}}</h1>
     </div>
     <div class="row">
         <main class="col-sm-12 col-md-7 col-lg-8">
@@ -23,11 +23,14 @@
                 <h2>Environment Conditions</h2>
                 <ul class="topic-blocks subtopic block-container clearfix">
                     <li ng-repeat="subtopic in topic.subtopics">
-                        <a class="block block-hover" ui-sref="admin.prototype.subtopic({topic: topic.topic, subtopic: subtopic.subtopic})">
-                            <span class="title">{{subtopic.subtopic}}</span>
+                        <a class="block block-hover" ng-show="subtopic.description !== ''" ui-sref="admin.prototype.subtopic({topicId: topic.topicId, subtopicId: subtopic.subtopicId})">
+                            <span class="title">{{subtopic.name}}</span>
                             <span class="actions">{{subtopic.conditions.length}}</span>
                         </a>
-                    </li>
+                        <a class="block block-hover" ng-show="subtopic.description ===''" ui-sref="#">
+                            <span class="title">{{subtopic.name}}</span>
+                            <span class="actions">{{subtopic.conditions.length}}</span>
+                        </a>
                     </li>
                 </ul>
             </section>
