Prototype Development - adding markup and route for actions-main.html - fixing up some / standardizing iconography for CE actions - removing comments from the map link (project-main.html) - fixing up some inconsistent spacing in the topics page - some minor styling tweaks.

--- a/modules/prototype/client/styles/components/project-status.scss
+++ b/modules/prototype/client/styles/components/project-status.scss
@@ -9,6 +9,12 @@
         font-size: 0.75rem;
     }
 
+    .tag-default {
+        background: #CCC;
+        font-weight: bold;
+        color: #494949;
+    }
+
     .inactive {
         color: #CCC;
 
