--- a/modules/prototype/client/styles/helpers/helpers.scss
+++ b/modules/prototype/client/styles/helpers/helpers.scss
@@ -85,8 +85,9 @@ p {
 
 /* BOOTSTRAP OVERRIDES */
 .tag-default {
-    color: #494949;
-    background: #DDD;
+    color: #FFF;
+    font-weight: normal;
+    background: #5475a7;
 }
 
 .table {
