--- a/modules/prototype/client/views/ce-action.html
+++ b/modules/prototype/client/views/ce-action.html
@@ -15,7 +15,7 @@
             <span>{{action.type}} Issued: {{action.orderId}}</span>
         </div>
 
-        <div class="title-container">
+        <div class="title-container stacked">
             <h1>{{action.type}} Issued: {{action.orderId}}</h1>
             <div class="tag-list">
                 <span class="tag tag-default" ng-repeat="topic in action.topics">{{topic}}</span>
