--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -18,13 +18,11 @@
                 <i class="material-icons fl">insert_drive_file</i>Project Documents
             </a>
             -->
-            <!--
             <a class="btn btn-link" 
                 data-toggle="modal" 
                 data-target="#mapWindow">
                 <i class="material-icons fl">pin_drop</i>Launch Map
             </a>
-            -->
         </div>
         
     </div>
@@ -88,7 +86,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">list</i>
+                                <i class="material-icons">assignment_late</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
