--- a/modules/prototype/client/styles/components/blocks.scss
+++ b/modules/prototype/client/styles/components/blocks.scss
@@ -62,12 +62,34 @@
 }
 
 /* COMPLIANCE & ENFORCEMENT BLOCKS */
+.ce-blocks {
+    a {
+        text-decoration: none;
+        color: #2b5580;
+    }
+
+    .block {
+        color: #2b5580;
+
+        .title {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        } 
+    }
+}
+
 .metric {
-    padding: 1rem;
+    flex: 0 0 auto;
+    width: 3.5rem;
+    padding-top: 0.45rem;
     color: #FFF;
-    background: #494949;
+    background: #2b5580;
+    text-align: center;
+    font-size: 1.675rem;
     font-weight: bold;
 }
+
 
 /* TOPIC BLOCKS */
 .topic-blocks {
