--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -23,7 +23,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">playlist_add_check</i>
+                                <i class="material-icons">assignment_turned_in</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Inspections</span>
@@ -36,7 +36,7 @@
                     <li>
                         <div class="block">
                             <div class="avatar">
-                                <i class="material-icons">list</i>
+                                <i class="material-icons">assignment_late</i>
                             </div>
                             <span class="title">
                                 <span class="primary">Actions</span>
